--- a/App/Views/StructurePages/structurePages.html
+++ b/App/Views/StructurePages/structurePages.html
@@ -15,6 +15,7 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+            <link rel="shortcut icon" href="#"> <!--Erro flavico ico-->
             <title>{{titulo_document}}</title>
         </head>
         <body id="body" 
