--- a/public/css/HomePageStyle/home.css
+++ b/public/css/HomePageStyle/home.css
@@ -305,7 +305,10 @@ body {
                             padding-left: 5px;
                             padding-right: 10px;
                         }
-                    }   
+                        & .vazio {
+                            color: red;
+                        }
+                    }                   
                 }
 
                 & .comentario-obs {
@@ -440,9 +443,32 @@ body {
                     padding-left: 10px;
                     border-radius: 5px;
 
-                    & #message-disponibilidade-fail {
+                    & #message-disponibilidade-indisponivel {
                         /*background-color: rgb(252, 129, 129);*/
                         color: rgb(139, 26, 18);
+                        margin-left: 10px;
+                    }
+
+                    & #icon-verify {
+                        width: 20px;
+                    }
+                }
+                & .div-message-disponibilidade-vazio {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(255, 247, 205);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-vazio {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(190, 104, 6);
                         margin-left: 10px;
                     }
 
@@ -897,10 +923,33 @@ body {
                     padding-left: 10px;
                     border-radius: 5px;
 
-                    & #message-disponibilidade-fail {
+                    & #message-disponibilidade-indisponivel {
                         /*background-color: rgb(252, 129, 129);*/
                         font-size: 15px;
                         color: rgb(139, 26, 18);
+                        margin-left: 10px;
+                    }
+
+                    & #icon-verify {
+                        width: 20px;
+                    }
+                }
+                & .div-message-disponibilidade-vazio {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(255, 247, 205);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-vazio {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(190, 104, 6);
                         margin-left: 10px;
                     }
 
@@ -1357,9 +1406,33 @@ body {
                     padding-left: 10px;
                     border-radius: 5px;
 
-                    & #message-disponibilidade-fail {
+                    & #message-disponibilidade-indisponivel {
                         /*background-color: rgb(252, 129, 129);*/
                         color: rgb(139, 26, 18);
+                        margin-left: 10px;
+                        font-size: 12px;
+                    }
+
+                    & #icon-verify {
+                        width: 20px;
+                    }
+                }
+                & .div-message-disponibilidade-vazio {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(255, 247, 205);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-vazio {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(190, 104, 6);
                         margin-left: 10px;
                         font-size: 12px;
                     }
