Tratamento de erros
Alguns tratamentos  de erros nas Views Cadastro, Login, E Agendamento.

--- a/App/Views/CortesPage/cortes.html
+++ b/App/Views/CortesPage/cortes.html
@@ -274,7 +274,7 @@
             </button>
         </div>
         <div id="consideracoes" class="consideracoes-light">
-            <p><span>Agende seu horário na Barbearia Estilo Único e descubra o que significa ter um corte realmente 
+            <p><span>Agende seu horário na Barber Shop Noblesse e descubra o que significa ter um corte realmente 
                 personalizado!</span>
             </p>
             <p>Nossa equipe de barbeiros experientes está pronta para transformar suas ideias em realidade, 
