--- a/public/css/HomePageStyle/home.css
+++ b/public/css/HomePageStyle/home.css
@@ -476,6 +476,29 @@ body {
                         width: 20px;
                     }
                 }
+                & .div-message-disponibilidade-erro {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(250, 131, 131);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-erro {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(148, 23, 18);
+                        margin-left: 10px;
+                    }
+
+                    & #icon-verify {
+                        width: 20px;
+                    }
+                }
             }
         }
     }
@@ -957,6 +980,29 @@ body {
                         width: 20px;
                     }
                 }
+                & .div-message-disponibilidade-erro {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    background-color: rgb(250, 131, 131);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-erro {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(148, 23, 18);
+                        margin-left: 10px;
+                    }
+
+                    & #icon-verify {
+                        width: 20px;
+                    }
+                }
             }
         }
     }
@@ -1265,10 +1311,11 @@ body {
 
                         & #inp-data {
                             height: 37px;
-                            width: calc(100% - 5px);
+                            width: calc(100% - 23px);
                             border: 1px solid rgb(133, 133, 133);
                             outline: none;
-                            border-radius: 5px;                        
+                            border-radius: 5px;  
+                            padding: 0 10px;                      
                         }
                     }   
                 }
@@ -1439,6 +1486,31 @@ body {
 
                     & #icon-verify {
                         width: 20px;
+                    }
+                }
+                & .div-message-disponibilidade-erro {
+                    font-family: Arial, Helvetica, sans-serif;
+                    width: calc(100% - 10px);
+                    
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    background-color: rgb(250, 131, 131);
+                    /*border: 1px solid rgb(170, 90, 90);*/
+                    margin-top: 10px;
+                    padding-top: 15px;
+                    padding-left: 10px;
+                    border-radius: 5px;
+
+                    & #message-disponibilidade-erro {
+                        /*background-color: rgb(252, 129, 129);*/
+                        color: rgb(148, 23, 18);
+                        margin-left: 10px;
+                        text-align: center;
+                    }
+
+                    & #icon-verify {
+                        width: 30px;
                     }
                 }
             }
