upgrade update data user

--- a/App/Views/HomePage/home.html
+++ b/App/Views/HomePage/home.html
@@ -226,7 +226,7 @@
                              src="public/img/disponivel.png" 
                              alt="Verificado"/>
                         <p id="message-disponibilidade-success">
-                            Horário disponível. Clique em 'Agendar'.
+                            Horário disponível. Clique em <strong>'Agendar'</strong>.
                         </p>                          
                     </div>
                 {% endif %}
@@ -248,7 +248,7 @@
                              src="public/img/indisponivel.png" 
                              alt="Verificado"/>
                         <p id="message-disponibilidade-indisponivel">
-                            Horário indisponível nessa data! Tente outro horário.
+                            Horário <strong>indisponível</strong> nessa data! Tente outro horário.
                         </p>                          
                     </div>
                 {% endif %}
